# MIA

./: Contour.py  DeepCellDetector.py  DeepCellDetector.spec  DeepLearning.py  README.md  Tools.py  UI.py  build.py  dl_augment.py  dl_data.py  dl_losses.py  dl_models.py  mia_environment.yaml  pyproject.toml  readme.md  requirements.txt  resnet50_SegNet.py  setup.py  simple_SegNet.py  startup.py  ui_Canvas.py  ui_ResultsWindow.py  ui_Training.py
dl/: DeepLearning.py  dl_augment.py  dl_classification.py  dl_data.py  dl_datagenerator.py  dl_hed.py  dl_imagedata.py  dl_imageloader.py  dl_labels.py  dl_losses.py  dl_lrschedule.py  dl_metrics.py  dl_mode.py  dl_models.py  dl_objectcounting.py  dl_pixelbasedprediction.py  dl_segmentation.py  dl_training_record.py  dl_undefinedmode.py  dl_utils.py
dl/data/: imagedata.py  labels.py
dl/loss/: classification_losses.py  loss_functions.py  losses.py  regression_losses.py  (+1 more)
mia/: __init__.py  __version__.py  mia.py  mia_gui.py  startup.py
stitcher/: ImageStitcher.py  ImageStitcher.spec  build.py
ui/: Tools.py  UI.py  settings.py  style.py  ui_Abstract.py  ui_Augment.py  ui_Canvas.py  ui_ContourPainter.py  ui_ImageLabelPainter.py  ui_NoPainter.py  ui_ObjectDetectionSettings.py  ui_ObjectPainter.py  ui_Painter.py  ui_PostProcessing.py  ui_Results.py  ui_ResultsWindow.py  ui_SegmentationSettings.py  ui_Settings.py  ui_TrainPlot.py  ui_TrainSettings.py  ui_Training.py  ui_utils.py
utils/: Contour.py  FilesAndFolders.py  Image.py  ImageLabel.py  Observer.py  Point.py  Shape.py  image.py  utility_functions.py  workerthread.py
(+168 files in other folders)
