[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mianalyzer"
version = "0.3.0"
authors = [
  { name="Nils Koerber" },
]
description = "MIA, deep learning based Microscopic Image Analyzer"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MIAnalyzer/MIA/"
"Bug Tracker" = "https://github.com/MIAnalyzer/MIA/issues"

[project.scripts]
mianalyzer = "mia.startup:start"
